[package]
name = "ws2812-delay"
version = "0.1.0"
authors = ["Raphael Peters <rappet@rappet.de>", "David Sawatzke <david-sawatzke@users.noreply.github.com>"]
edition = "2018"
categories = [
    "embedded",
    "no-std",
    "hardware-support"]
keywords = ["smart-leds", "ws2812"]
description = "Delay-based driver for ws2812 leds"
documentation = "https://docs.rs/crate/ws2812-timer-delay"
license = "MIT OR Apache-2.0"
readme = "README.md"
repository = "https://github.com/smart-leds-rs/ws2812-timer-delay-rs"

[dependencies]
smart-leds-trait = "0.3.0"
embedded-hal = "1.0.0"

[features]
slow = []
